# src/middleware/validator.ts
@@ -9,7 +9,7 @@ const warrantyValidationRules = () => {
     // purchaseDate must be a date
     body('purchaseDate').isDate({ format: 'YYYY/MM/DD' }).withMessage('must follow the format of YYYY/MM/DD'),
     // durationInYears must be a float in range of .1 to 100
-    body('durationInYears').isFloat({ min: 0.1, max: 100 }).withMessage('must be within range of 0.1 and 100'),
+    body('expiration').isDate({ format: 'YYYY/MM/DD' }).withMessage('must follow the format of YYYY/MM/DD'),
     // company must be not empty
     body('company').notEmpty().trim().withMessage('must not be empty'),
     // details must be not empty
@@ -19,7 +19,9 @@ const warrantyValidationRules = () => {
     // phone must be 10 digits long
     body('phone').isMobilePhone('en-US').withMessage('must be a valid phone number in the format: ##########'),
     // linkToFileClaim is a URL
-    body('linkToFileClaim').isURL().withMessage('must be a URL')
+    body('linkToFileClaim').isURL().withMessage('must be a URL'),
+    // githubId is required
+    body('githubId').notEmpty().withMessage('must be a valid string'),
   ];
 };
 
@@ -31,9 +33,11 @@ const validate = (req: Request, res: Response, next: NextFunction): void => {
   const extractedErrors: { [key: string]: string }[] = [];
   errors.array().map(err => extractedErrors.push({ [err.type]: `${err.type} ${err.msg}` }));
 
-  res.status(422).json({
-    errors: extractedErrors,
-  });
+  if (!errors.isEmpty()) {
+    res.status(422).json({
+      errors: extractedErrors,
+    });
+  }
 };
 
 export {
